--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
     "version": 2,
     "routes": [
+      { "handle": "filesystem" },
+      { "src": "/(.*)", "dest": "/app.py" }
+    ],
+    "builds": [
       {
-        "src": "/(.*)",
-        "dest": "app.py"
+        "src": "/app.py",
+        "use": "@vercel/python"
       }
     ]
   }
