--- a/vercel.json
+++ b/vercel.json
@@ -1,2 +1,15 @@
-
+{
+    "version": 2,
+    "builds": [
+        {
+          "src": "/app.py",
+          "use": "@vercel/python"
+        }
+      ],
+    "routes": [
+      { "handle": "filesystem" },
+      { "src": "/(.*)", "dest": "/app.py" }
+    ]
+    
+  }
   
