--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
     "builds": [
         {
           "src": "/app.py",
-          "use": "@vercel/python"
-        }
+          "use": "@vercel/python"}
       ],
     "routes": [
       { "handle": "filesystem" },
