--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,1 @@
-﻿asgiref==3.7.2
-asttokens==2.4.1
-attrs==23.1.0
-blinker==1.7.0
-certifi==2023.7.22
-cffi==1.16.0
-cfscrape==2.1.1
-charset-normalizer==3.3.0
-click==8.1.7
-colorama==0.4.6
-comm==0.2.1
-debugpy==1.8.1
-decorator==5.1.1
-EasyProcess==1.1
-entrypoint2==1.1
-et-xmlfile==1.1.0
-executing==2.0.1
-Flask==3.0.2
-h11==0.14.0
-idna==3.4
-ipykernel==6.29.3
-ipython==8.22.1
-itsdangerous==2.1.2
-jedi==0.19.1
-Jinja2==3.1.3
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.6
-MouseInfo==0.1.3
-mss==9.0.1
-nest-asyncio==1.6.0
-numpy==1.25.0
-openpyxl==3.1.2
-outcome==1.2.0
-packaging==23.1
-parso==0.8.3
-Pillow==10.0.0
-platformdirs==4.2.0
-prompt-toolkit==3.0.43
-psutil==5.9.8
-pure-eval==0.2.2
-PyAutoGUI==0.9.54
-pycparser==2.21
-pycryptodome==3.18.0
-PyGetWindow==0.0.9
-Pygments==2.17.2
-PyMsgBox==1.0.9
-pyparsing==3.0.9
-pyperclip==1.8.2
-PyRect==0.2.0
-pyscreenshot==3.1
-PyScreeze==0.1.29
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-pytweening==1.0.7
-pytz==2023.3
-pywin32==306
-pyzmq==25.1.2
-regex==2023.6.3
-requests==2.31.0
-selenium==4.14.0
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-sqlparse==0.4.4
-stack-data==0.6.3
-tornado==6.4
-traitlets==5.14.1
-trio==0.22.2
-trio-websocket==0.11.1
-tzdata==2023.3
-ujson==5.8.0
-undetected-chromedriver==3.5.3
-urllib3==2.0.3
-vboxapi==1.0
-wcwidth==0.2.13
-websockets==11.0.3
-Werkzeug==3.0.2
-wsproto==1.2.0
+﻿Flask==3.0.2
